# NVlabs___alpamayo-coc-autolabeler

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements-lock.txt
.github/ISSUE_TEMPLATE/: bug_report_template.md  config.yml  documentation_request_template.md  feature_request_template.md
docs/: meta_action_autolabel.md
scripts/: extract_pai_videos_from_index.py  vis_video.py  vis_video_pai.py
scripts/coc_validation_stage/: README.md  common.py  eval_stage1_coc_evidence_vllm.py  eval_stage2_coc_behavior_vllm.py  eval_stage3_coc_causal_vllm.py
src/coc_labeling/: data_labeling.py  keyframe_auto_select.py
src/coc_labeling/agents/: labeling_agent.py
src/coc_labeling/agents/vlm/: __init__.py  coc_agent.py  factory.py
src/coc_labeling/config/: base_config_vlm.yaml  base_config_vlm_rel_ts.yaml
src/coc_labeling/config/data/: base.yaml  (+1 more)
src/coc_labeling/data_loader/: __init__.py  meta_action_loader.py  segment_generators.py  trajdata.py  vector_loader.py  video_loader.py
src/coc_labeling/model_clients/: __init__.py  chat.py  chat_utils_cloud.py  chat_utils_local_server.py  openai_client.py  runtime_config.py  timeout.py  vlm_wrapper.py
src/coc_labeling/prompts/: common.py
src/coc_labeling/utils/: data.py  general_helpers.py  io.py  type_check.py
src/meta_action/: data_labeling.py  post_processing.py
src/meta_action/data_structures/: ego_meta_action.py  ego_meta_action_wrapper.py  motion.py  scenario.py
src/meta_action/processor/: common.py
src/meta_action/utils/: constant.py  io.py  type_check.py
(+23 files in other folders)
