[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coc-autolabeling"
version = "1.0.0"
description = "Chain-of-Causation (CoC) Autolabeling Pipeline."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "PyYAML",
  "omegaconf",
  "hydra-core",
  "pydantic",
  "requests",
  "openai",
  "httpx",
  "tenacity",
  "torch",
  "trajdata @ git+https://github.com/NVlabs/trajdata.git@coc_autolabeling-1.0.0",
  "tqdm",
  "opencv-python",
]

[project.optional-dependencies]
dev = ["pytest", "pyright", "ruff"]
qwen = ["qwen-vl-utils", "transformers", "vllm"]

[project.scripts]
meta-action-autolabel = "meta_action.data_labeling:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["coc_labeling*", "meta_action*"]

[tool.setuptools.package-data]
coc_labeling = [
  "config/*.yaml",
  "config/data/*.yaml",
  "config/data_loader/*.yaml",
  "config/misc/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
